no edges uses Vertex procedure
cleanup